[tool.poetry]
name = "repl-nix-blackjack-start-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_blackjack_start_1"}]

[tool.poetry.dependencies]
python = "^3.10"
replit = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
